[tool.poetry]
name = "learn-gaussian-process-regression"
version = "0.1.0"
description = ""
authors = ["Luke Schiefelbein <luke.schiefelbein@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "learn_gaussian_process_regression"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "^1.24.2"
plotly = "^5.14.1"
ipywidgets = "^8.0.6"
ipython = "^8.12.0"
pandas = "^2.0.0"
seaborn = "^0.12.2"
ipykernel = "^6.22.0"
scipy = "^1.10.1"
jupyter-dash = "^0.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
